add toast for share packet action

--- a/src/components/Toast.css
+++ b/src/components/Toast.css
@@ -1,7 +1,6 @@
 #snackbar {
     visibility: hidden;
     min-width: 250px;
-    margin-left: -125px;
     background-color: #333;
     color: #fff;
     text-align: center;
@@ -9,9 +8,12 @@
     padding: 16px;
     position: fixed;
     z-index: 1;
-    left: 50%;
-    bottom: 30px;
-    font-size: 17px;
+    left: 0;
+    right: 0;
+    margin-left: 10%;
+    margin-right: 10%;
+    bottom: 20%;
+    font-size: 15px;
 }
 
 #snackbar.show {
